--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <title>Intro section with dropdown navigation</title>
 </head>
 <body>
-    
+    <header> 
+            <div class="empresa">
+                <img class="logo" src="images/logo.svg" alt="logo">
+                <p>Features <img src="images/icon-arrow-down.svg" alt="seta"></p>
+                <p>Company <img src="images/icon-arrow-down.svg" alt="seta"></p>
+                <p>Carrers</p>
+                <p>About</p>
+            </div>
+            <div class="conta">
+                <p>login</p>
+                <p class="botao">Register</p>
+            </div>
+    </header>
+
+    <main>
+        <div class="tudo-com-imagens">
+            <div class="texto-produto">
+                <h1 class="title">
+                    Make <br> remote work
+                </h1>
+                <p class="texto">
+                    Get your team in sync, no matter your location. <br> Streamline processes, create team rituals, and <br> watch productivity soar.
+                </p>
+                <div class="botao2">
+                    Learn more
+                </div>
+            </div>
+            <div class="imagens">
+                <img class="clientes" src="images/client-databiz.svg" alt="">
+                <img class="clientes" src="images/client-audiophile.svg" alt="">
+                <img class="clientes" src="images/client-meet.svg" alt="">
+                <img class="clientes" src="images/client-maker.svg" alt="">
+            </div>
+        </div>
+
+        <img class="foto-grande" src="images/image-hero-desktop.png" alt="">
+    </main>
 </body>
 </html>
