--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
     <header> 
             <div class="empresa">
                 <img class="logo" src="images/logo.svg" alt="logo">
-                <p>Features <img src="images/icon-arrow-down.svg" alt="seta"></p>
+                <div class="features">
+                    <p>Features <img src="images/icon-arrow-down.svg" alt="seta"></p>
+                    <div class="feature-modal">
+                        <p><img src="images/icon-todo.svg" alt=""> Todo List</p>
+                        <p><img src="images/icon-calendar.svg" alt=""> Calendar</p>
+                        <p><img src="images/icon-reminders.svg" alt=""> Reminders</p>
+                        <p><img src="images/icon-planning.svg" alt=""> Planning</p>
+
+                    </div>
+                </div>
+                
                 <p>Company <img src="images/icon-arrow-down.svg" alt="seta"></p>
                 <p>Carrers</p>
                 <p>About</p>
